<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTelp"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/Telepon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlamat" />

    <ImageView
        android:id="@+id/imgFotoku"
        android:layout_width="130dp"
        android:layout_height="190dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/fotoku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fotoku" />

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFotoku" />

    <TextView
        android:id="@+id/txtNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/NIM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNama" />

    <TextView
        android:id="@+id/txtHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Hobi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNim" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHobi" />

    <TextView
        android:id="@+id/txtAlamat"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/Alamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

    <Button
        android:id="@+id/btnMaps"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="maps"
        android:text="alamat"
        app:layout_constraintStart_toEndOf="@+id/txtAlamat"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc"
        tools:ignore="TouchTargetSizeCheck"
        tools:textSize="8sp" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="email"
        android:text="@string/btnEmail"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/btnTelp2"
        tools:ignore="TouchTargetSizeCheck"
        tools:textSize="8sp" />

    <Button
        android:id="@+id/btnTelp2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="panggil"
        android:text="Telp"
        app:layout_constraintStart_toEndOf="@+id/txtTelp"
        app:layout_constraintTop_toBottomOf="@+id/btnMaps"
        tools:ignore="TouchTargetSizeCheck"
        tools:textSize="8sp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelp" />

</androidx.constraintlayout.widget.ConstraintLayout>